--- a/styles/colors.css
+++ b/styles/colors.css
@@ -6,10 +6,6 @@
   background-color: #4F4F4F;
 }
 
-.blanco{
-  background-color: #EAEAEA;
-}
-
 .rojo{
   background-color: #800020;
 }
@@ -24,6 +20,9 @@
   background-color: #4F4F4F;
 }
 
+.blanco{
+  background-color: #EAEAEA;
+}
 .links-color{
   color:#DAA520;
   opacity: 0.8;
@@ -37,3 +36,35 @@
   opacity: 1;
 }
 
+main {
+  padding-top: 50px; /* Ajusta este valor según la altura de tu header */
+}
+
+@media (max-width: 768px) {
+  /* .navbar-expand-lg .navbar-nav {
+    display: none; // Comentada para probar si es la causa del problema con el menú hamburguesa
+  } */
+
+  /* .nav-bg {
+    display: none; // Comentada para probar si afecta la visibilidad del menú
+  } */
+
+  .navbar-toggler {
+    display: block; /* Asegura que el botón de hamburguesa sea visible en pantallas pequeñas */
+    margin-left: auto; /* Alinea el botón a la derecha */
+  }
+
+  .navbar-collapse.collapsing,
+  .navbar-collapse.show {
+    display: block; /* Asegura que el menú desplegable sea visible cuando se activa el botón de hamburguesa */
+  }
+
+  /* Puedes agregar aquí cualquier otra regla específica para dispositivos móviles */
+}
+
+
+@media (min-width: 769px) {
+  .navbar-toggler {
+    display: none; /* Oculta el botón de la hamburguesa en pantallas más grandes */
+  }
+}
