link fixed and where we are started

--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,7 @@
 .neon-text {
   text-shadow: 0 0 10px rgba(255, 0, 149, 0.8), 0 0 20px rgba(255, 0, 150, 0.8), 0 0 30px rgba(255, 0, 150, 0.8);
 }
+
+.neon-bg {
+  box-shadow: 0 0 20px rgba(255, 0, 150, 0.8), 0 0 30px rgba(255, 0, 150, 0.8), 0 0 40px rgba(255, 0, 150, 0.8);
+}
