--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
   background-repeat: no-repeat;
   height: 100vh;
   backdrop-filter: blur(3px);
+  background-position: center;
 }
 
 .neon-text {
