--- a/css/style.css
+++ b/css/style.css
@@ -27,16 +27,29 @@
   font-size: 24px;
 }
 
+.swiper-container {
+  position: relative;
+  overflow: hidden; /* Asegúrate de que nada sobresalga */
+}
+
 .swiper-slide {
-  height: 300px; /* Altura fija */
-  width: 500px; /* Ancho fijo */
   display: flex;
   justify-content: center;
   align-items: center;
+  /* Altura ajustada según tu necesidad */
 }
 
+/* Asegúrate de que las imágenes se ajusten correctamente dentro de las diapositivas */
 .swiper-slide img {
   max-height: 100%;
   max-width: 100%;
   object-fit: cover; /* O 'contain' según tus necesidades */
 }
+
+
+.swiper-button-prev, .swiper-button-next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
